infrastructure/traefik/config/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  redirectScheme:
    scheme: https
    permanent: true
